[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evaldet"
description = "Evaluation for Detection and Tracking"
license = "Apache-2.0"
authors = [
  { name = "Tadej", email = "tadej.svetina@gmail.com" },
]
readme = "README.md"
keywords = ["evaluation", "tracking", "object detection", "computer vision"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "numpy~=1.23.2",
  "scipy~=1.9.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/evaldet/__init__.py"

[project.urls]
Documentation = "https://evaldet.readthedocs.io"
Issues = "https://github.com/tadejsv/evaldet/issues"
Source = "https://github.com/sasp-ai/evaldet"

[project.optional-dependencies]
ci = [
    "flake8~=5.0.4",
    "pytest~=7.1.2",
    "black~=22.0.6",
    "isort~=5.10.1",
    "mypy~=0.971",
    "pre-commit~=2.20.0"
]
docs = [
    "Shpinx~=5.1.1",
    "pydata-sphinx-theme~=0.9.2",
    "sphinx-autodoc-typehints~=1.19.1",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.vscode",
  "/docs",
  "/tests"
]

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ['^tests/.*\.py', 'docs/source/conf.py']
disallow_untyped_defs = true
ignore_missing_imports = true
# disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["scipy"]
