[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evaldet"
description = "Evaluation for Detection and Tracking"
license = "Apache-2.0"
authors = [
  { name = "Tadej", email = "tadej.svetina@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["evaluation", "tracking", "object detection", "computer vision"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "numpy~=1.23",
  "scipy~=1.9",
  "numba~=1.56",
  "pyarrow>=10.0"
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/evaldet/__init__.py"

[project.urls]
Documentation = "https://evaldet.readthedocs.io"
Issues = "https://github.com/tadejsv/evaldet/issues"
Source = "https://github.com/sasp-ai/evaldet"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.vscode",
  "/docs",
  "/tests"
]

[tool.ruff]
select = ["E", "F", "Q", "N", "ANN", "T20", "TID", "SIM"]
ignore = ["N806", "N805", "E501", "ANN101", "ANN102", "SIM108"]
target-version = "py310"
extend-exclude = ["old_docs/source/conf.py"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.isort]
profile = "black"

[tool.mypy]
exclude = ['old_docs/source/conf.py']
disallow_untyped_defs = true
ignore_missing_imports = false
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["scipy.*", "pyarrow.*", "numba.*", "deepdiff.*"]
ignore_missing_imports = true
