[metadata]
name = evaldet
version = attr: evaldet.__version__
description = Evaluation for Detection and Tracking
long_description = file: README.md, CHANGELOG.md
long_description_content_type= text/markdown
keywords = evaluation, tracking, object detection, computer vision
author = Tadej Svetina
url = https://github.com/traffic-ai/evaldet
license = Apache-2.0 License
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Image Recognition

[options]
packages = evaldet
install_requires =
  numpy
  scipy
python_requires=>=3.7
include_package_data = True

[options.extras_require]
tests = 
  pytest
  flake8
  black
  mypy
  isort
docs = 
  Sphinx
  pydata-sphinx-theme
  sphinx-autodoc-typehints

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = docs/source/conf.py
per-file-ignores =
    evaldet/tracks.py:E501

[mypy]
exclude = (setup.py|docs/source/conf.py)

[mypy-tests.*]
ignore_errors = True